# rusty-chain

./: Cargo.toml  README.md  index.html
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  index.css
server/: package-lock.json  package.json
server/src/: index.ts  types.ts
src/: block_chain.rs  lib.rs  main.rs
wasm_blockchain/: Cargo.toml
wasm_blockchain/pkg/: package.json  rusty_chain.d.ts  rusty_chain.js  rusty_chain_bg.wasm  rusty_chain_bg.wasm.d.ts
wasm_blockchain/src/: helpers.rs  lib.rs
