[package]
name = "rusty-chain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.5"
wasm-bindgen = { version = "0.2" , features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
js-sys = "0.3.55"
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
sha2 = "0.10.0"
bincode = "1.3.3"
log = "0.4.6"
wasm-logger = "0.2.0"

[lib]
crate-type = ["cdylib"]
